Fixed cloud effect pushing on mobile view

--- a/style.css
+++ b/style.css
@@ -30,6 +30,10 @@ html {
     font-family: Roboto, sans-serif;
     overflow-x:hidden;
 }
+html, body {
+    max-width:100%;
+    overflow-x:hidden;
+}
 
 h1 {
     color:white;
@@ -309,5 +313,13 @@ footer a:hover {
 @media(max-width: 548px){
     .infoWrapper{
         grid-template-columns: 1fr;
+    }
+    .colourBox {
+        height:50px;
+        width:50px;
+    }
+    .colourBox p {
+        margin:75px 0 50px 0;
+        font-size:1.0rem;
     }
 }
